fixed overflow content in workoutpage. fixed overflow in edit form page

--- a/src/Components/EditWorkout/EditWorkout.css
+++ b/src/Components/EditWorkout/EditWorkout.css
@@ -1,6 +1,3 @@
-.edit-container{
-    height: 100vh;
-}
 .edit-form{
     display: flex;
     justify-content: center;
